# metatrader_ea

./: .gitignore  README.md  bot.py  build.bat  build_process.txt  ea_bot_exe_build.py  main_win.py  main_x copy.py  main_x.py  pyproject.toml  terminal_login.json  version.py
ea_mt5_python/: main_win.py
handlers/: classes.py  constant.py  logger.py  mt5_handler.py
utils/: mt5_utils.py
