[tool.poetry]
name = "eabot"
version = "0.1.0"
description = ""
authors = ["duyet-lfg <duyet.mai@lfglobaltech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
metatrader5 = "^5.0.44"
requests = "^2.28.2"
numpy = "^1.24.2"
dacite = "^1.8.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
