[tool.poetry]
name = "eabot"
version = "0.1.0"
description = ""
authors = ["duyet-lfg <duyet.mai@lfglobaltech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
metatrader5 = "^5.0.44"
requests = "^2.28.2"
numpy = "^1.24.2"
dacite = "^1.8.0"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.9.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
